# Fenicsx-Micromagnetics

./: .gitignore  LICENSE  README.md  Readme.md  pyproject.toml
Examples/Bloch_Skyrmion/: Post_Processing.ipynb  Relax.py  relax.py
Examples/Current-Driven_Vortex/: Dynamics.py  Post_Processing.ipynb  Relax.py
Examples/FMR/: Dynamics.py  PostProcessing.ipynb  Relax.py
Examples/Neel_Skyrmion_on_nanotube/: Post_Processing.ipynb  Relax.py
Examples/hysteresis_octahedral_nanoparticles/: Relax.py
gpu/: Readme.md
gpu/Dockerfile/src/: __init__.py
gpu/Examples/Current-Driven_Vortex/: Dynamics_GPU.py
gpu/src/micromagnetic_gpu/: Anisotropy_GPU.py  DMI_Interfacial_GPU.py  Demag_Lindholm_GPU.py  Exchange_GPU.py  Lindholm_kernel.py  __init__.py  llg_module_GPU.py  llg_stt_module_GPU.py
src/: pyproject.toml
src/Micromagnetic/: Anisotropy.py  Cubic_Anisotropy.py  DMI_Bulk.py  DMI_Interfacial.py  Demag.py  Exchange.py  Zhang_Li.py  __init__.py  llg_module.py  llg_stt_module.py
src/Micromagnetic/Demag/: Demag_Bempp.py  Demag_FMM.py  Demag_Lindholm.py  Demag_Lindholm_HTool_MPI.py  __init__.py
