[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "micromagnetics-llg"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["numpy>=1.23"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
